[package]
name = "coruvis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.9", features = ["macros", "ws"] }
serde = "1.0.154"
serde_json = "1.0.93"
sysinfo = { git = "https://github.com/GuillaumeGomez/sysinfo.git", branch = "master", features = ["serde"]}
tokio = { version = "1.25.0", features = ["full"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
